# my-gpt2

./: .gitignore  CLAUDE_LOG.md  MODEL.md  PLAN.md  README.md  TRACE.md  VIZ.md  VIZ_INTERNALS.md  pyproject.toml
src/math/: README.md  basic.md  index.html  make_dataset.py  mnist_data.js
src/my_gpt2/: __init__.py  config.py  data.py  generate.py  hooks.py  inspect.py  manual_model.py  model.py  plotter.py  tokenizer.py  trace.py  train.py  train_manual.py  visualize.py  viz_server.py
src/my_gpt2/viz_static/: index.html
src/pytorch_basics/: 01_tensor_creation.py  02_tensor_shape_ops.py  03_matmul.py  04_autograd.py  05_nn_layers.py  06_activations_and_loss.py  07_causal_mask.py
tests/: test_manual_model.py  test_model.py  test_pytorch_basics.py
