[project]
name = "my-gpt2"
version = "0.1.0"
description = "A small from-scratch GPT-2 implementation for learning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
